<?xml version="1.0"?>
<package>

  <name>nav2d_localizer</name>
  <version>0.3.1</version>
  <description>
    Wrapper around Particle Filter implementation.
    The SelfLocalizer can be used as library or as a ros-node.
  </description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/self_localizer</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


</package>
