<?xml version="1.0"?>
<package>

  <name>nav2d_navigator</name>
  <version>0.3.1</version>
  <description>
    This package provides a node for higher level navigation of a mobile
    robot in a planar environment. It needs a map and the robot's position
    within this map to create a plan for navigation. When used together with
    a SLAM module it can also be used to perform autonomous exploration of
    the robot's workspace.
  </description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/robot_operator</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav2d_msgs</build_depend>
  <build_depend>nav2d_operator</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav2d_msgs</run_depend>
  <run_depend>nav2d_operator</run_depend>

</package>
