<?xml version="1.0"?>
<package>

  <name>nav2d_operator</name>
  <version>0.4.1</version>
  <description>
    The operator is a lightweight, purely reactive obstacle-avoidance
    module for mobile robots moving in a planar environment. The operator node
    works by evaluating a set of predefined motion primitives based on a local
    costmap and a desired direction. The best evaluated motion command will be
    send to the mobile base.
  </description>
  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/nav2d_operator</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
